<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>grid_map_components_type_adapter</name>
  <version>0.1.0</version>
  <description>rclcpp type adapter for grid_map::GridMap.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>grid_map_core</depend>
  <depend>grid_map_msgs</depend>
  <depend>grid_map_ros</depend>
  <depend>rclcpp</depend>

  <test_depend>ament_cmake_gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <filter_component
      type="GridMap"
      type_adapter="grid_map_components_type_adapter::ros::GridMapAdapter"
      message_type="grid_map_msgs/msg/GridMap"/>
  </export>
</package>
