<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>pcl_filter_components_xyzrgba</name>
  <version>0.1.0</version>
  <description>PointXYZRGBA instantiations of the PCL filter ROS 2 components.</description>
  <maintainer email="maik.knof@gmx.de">Maik Knof</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>pcl_filter_components</depend>
  <depend>filter_component_base</depend>
  <depend>filter_component_synchronizer</depend>
  <depend>pcl_filter_components_type_adapters</depend>
  <depend>rclcpp</depend>
  <depend>rclcpp_components</depend>
  <depend>rclcpp_lifecycle</depend>
  <depend>sensor_msgs</depend>
  <depend>std_msgs</depend>
  <depend>pcl_msgs</depend>
  <depend>pcl_conversions</depend>
  <depend>pcl_ros</depend>

  <export>
    <build_type>ament_cmake</build_type>
    <filter_component
      type="PointXYZRGBA"
      type_adapter="pcl_filter_components_xyzrgba::ros::PclCloudAdapterPointXYZRGBA"
      message_type="sensor_msgs/msg/PointCloud2"/>
    <filter_component
      filter="VoxelGridXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="PassThroughXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="CropBoxXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="ApproximateVoxelGridXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="UniformSamplingXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RandomSampleXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="GridMinimumXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="StatisticalOutlierRemovalXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RadiusOutlierRemovalXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="ConditionalRemovalXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="ExtractIndicesXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RemoveNaNXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RemoveInfiniteXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="KeepOrganizedXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="FrustumCullingXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="CropSphereXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="ProjectInliersXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="PlaneClipperXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="MedianFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="LocalMaximumXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="BilateralFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="VoxelGridCovarianceXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="MorphologicalFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="MovingLeastSquaresXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="PlaneModelFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="SACSegmentationExtractXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="EuclideanClusterExtractXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="ColorThresholdXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RGBRangeFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="RGBAAlphaFilterXYZRGBA"
      input="PointXYZRGBA"
      input_ports="cloud:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_cloud:PointXYZRGBA"/>
    <filter_component
      filter="PointCloudMergerXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      input_ports="input_1:PointXYZRGBA,input_2:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_input_1:PointXYZRGBA,orig_input_2:PointXYZRGBA"/>
    <filter_component
      filter="PointCloudConcatenateXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      input_ports="input_1:PointXYZRGBA,input_2:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_input_1:PointXYZRGBA,orig_input_2:PointXYZRGBA"/>
    <filter_component
      filter="PointCloudSubtractXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      input_ports="input_1:PointXYZRGBA,input_2:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_input_1:PointXYZRGBA,orig_input_2:PointXYZRGBA"/>
    <filter_component
      filter="PointCloudDifferenceXYZRGBA"
      input="PointXYZRGBA,PointXYZRGBA"
      input_ports="input_1:PointXYZRGBA,input_2:PointXYZRGBA"
      output="PointXYZRGBA"
      output_ports="cloud:PointXYZRGBA,orig_input_1:PointXYZRGBA,orig_input_2:PointXYZRGBA"/>
  </export>
</package>
